# LearningQuickDraw

./: .gitignore  README.md  generate_test_vol.py
.github/workflows/: release.yml
ae-fluid-effect/: CMakeLists.txt
ae-fluid-effect/resources/: fluid_effect.r
ae-fluid-effect/src/: fluid_effect.cpp  fluid_effect.h  tile_renderer.cpp  tile_renderer.h  vol_loader.cpp  vol_loader.h
blender-fluid-viewer/: __init__.py  cache_manager.py  operators.py  panels.py  vol_reader.py
docs/: LECTURE_NOTES.html  LECTURE_NOTES.md  PROJECT_DOCUMENT.html  PROJECT_DOCUMENT.md  QUICKDRAW_COMPLETE.html
houdini-fluid-hda/: create_hda.py  shelf_tool.py
houdini-fluid-hda/python/: dirty_tracker.py  sop_cook.py  vol_reader.py
mini-renderer/: CMakeLists.txt  DOCUMENT.html  DOCUMENT.md
mini-renderer-gpu/: CMakeLists.txt
mini-renderer-gpu/shaders/: cube.frag.glsl  cube.frag.hlsl  cube.vert.glsl  cube.vert.hlsl
mini-renderer-gpu/src/: gl_renderer.cpp  gl_renderer.h  main.cpp  timer.h
mini-renderer/src/: framebuffer.cpp  framebuffer.h  main.cpp  math3d.h  renderer.cpp  renderer.h
render-optimizer/src/: __init__.py  aabb.py  bvh.py  cache_formats.py  lod.py  optimizer.py
render-optimizer/tests/: test_optimizer.py
